--- a/package.json
+++ b/package.json
@@ -73,8 +73,9 @@
     "flux": "^2.1.1",
     "moment": "^2.10.6",
     "parse-torrent-file": "^3.2.1",
-    "react": "^0.13.3",
-    "react-router": "^0.13.4",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.0-rc3",
     "xtend": "^4.0.0"
   }
 }
