add routing support

--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
   "dependencies": {
     "classnames": "^2.1.5",
     "debug": "^2.2.0",
+    "es6-promise": "^3.0.2",
     "file-size": "^1.0.0",
     "flux": "^2.1.1",
+    "history": "^1.12.4",
     "moment": "^2.10.6",
     "parse-torrent-file": "^3.2.1",
     "react": "^0.14.0",
