--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bower-webpack-plugin": "^0.1.8",
     "browser-sync": "^2.2.1",
     "browserify": "^10.2.4",
+    "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.19.0",
     "debowerify": "^1.3.1",
     "del": "^1.1.1",
