--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^1.5.1",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.4.2",
+    "exports-loader": "^0.6.2",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
@@ -38,6 +39,7 @@
     "gulp-useref": "^1.1.1",
     "gulp-util": "^3.0.6",
     "http-proxy-middleware": "^0.8.2",
+    "imports-loader": "^0.6.4",
     "main-bower-files": "^2.5.0",
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.3.3",
@@ -82,6 +84,7 @@
     "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc3",
     "restify": "^4.0.3",
+    "whatwg-fetch": "^0.9.0",
     "xtend": "^4.0.0"
   }
 }
