--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-node_modules
+node_modules/*
+!node_modules/.gitkeep
 dist
 .tmp
 .sass-cache
 bower_components
 test/bower_components
-files/
-!files/*.svg
+files
