--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
-{  
+{
+  "name":"torrent-editor",
+  "version": "0.0.0",
   "scripts": {
     "start": "node ./server/app.js"
   },
+  "main": "server/app.js",
   "engines": {
-    "node": ">=0.12.0"
+    "node": ">=4"
   },
   "devDependencies": {
     "babel": "^5.5.6",
