update production build

--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -27,6 +27,10 @@ fi
 if [ -f "${OPENSHIFT_REPO_DIR}"/package.json ]; then
    echo "  - Installing dependencies w/ new version of npm ... "
    echo
-   (cd "${OPENSHIFT_REPO_DIR}"; export TMPDIR="/tmp"; npm i; gulp)
+   ( 
+      cd "${OPENSHIFT_REPO_DIR}";
+      export TMPDIR="/tmp";
+      npm i --production;
+    )
 fi
 
